--- a/MutEx_using_Token_and_Quorums/.project
+++ b/MutEx_using_Token_and_Quorums/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>RMIThreadTest</name>
+	<name>MutEx_using_Token_and_Quorums</name>
 	<comment></comment>
 	<projects>
 	</projects>
